--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.5.10",
     "@astrojs/starlight": "^0.21.5",
     "astro": "^4.3.5",
+    "astro-og-canvas": "^0.5.0",
+    "canvaskit-wasm": "^0.39.1",
     "sharp": "^0.32.5",
-    "@astrojs/check": "^0.5.10",
     "typescript": "^5.4.5"
   }
 }
