--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro-og-canvas": "^0.5.0",
     "canvaskit-wasm": "^0.39.1",
     "sharp": "^0.32.5",
+    "starlight-image-zoom": "^0.8.0",
     "typescript": "^5.4.5"
   }
 }
