--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.5.10",
     "@astrojs/starlight": "^0.28.2",
+    "@lorenzo_lewis/starlight-utils": "^0.2.0",
     "astro": "^4.16.1",
     "astro-og-canvas": "^0.5.0",
     "canvaskit-wasm": "^0.39.1",
