--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "canvaskit-wasm": "^0.39.1",
     "sharp": "^0.32.5",
     "starlight-image-zoom": "^0.8.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "tslib": "^2.6.2"
   }
 }
