--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/markdown-remark": "^6.1.0",
     "@astrojs/starlight": "^0.28.2",
     "@lorenzo_lewis/starlight-utils": "^0.2.0",
     "astro": "^4.16.1",
     "astro-og-canvas": "^0.5.0",
     "canvaskit-wasm": "^0.39.1",
+    "rehype-autolink-headings": "^7.1.0",
     "sharp": "^0.32.5",
     "starlight-image-zoom": "^0.8.0",
-    "typescript": "^5.4.5",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.5"
   }
 }
